# zunda-talk-ros2

./: README.md
zunda_talk/: package.xml  setup.cfg  setup.py
zunda_talk/zunda_talk/: voice_vox_synthesizer.py  zunda_talk_sub.py
