<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zunda_talk</name>
  <version>0.0.0</version>
  <description>This package allows Zundamon to read aloud the published string.</description>
  <maintainer email="tororo1219@gmail.com">rin</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
